# pydoge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pydoge/: __init__.py  cli.py  client.py  exceptions.py  models.py  wallet.py
tests/: conftest.py  test_client.py  test_wallet.py
