[build-system]
requires = ["uv_build>=0.1.0"]
build-backend = "uv_build"

[project]
name = "pydoge"
version = "0.1.0"
description = "Modern async Python SDK for Dogecoin"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "typer[all]>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.15.0",
]

[project.scripts]
pydoge = "pydoge.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/pydoge"
Documentation = "https://pydoge.readthedocs.io/"
Repository = "https://github.com/your-username/pydoge"
Issues = "https://github.com/your-username/pydoge/issues"
Changelog = "https://github.com/your-username/pydoge/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"] # assert false

[tool.ruff.lint.isort]
known-first-party = ["pydoge"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true



[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
markers = [
    "asyncio: marks tests as async",
    "integration: marks tests as integration tests",
]
asyncio_mode = "auto"